--- a/5retrieval-module.tex
+++ b/5retrieval-module.tex
@@ -5,9 +5,16 @@
 \label{section:retrievalengine}
 \section{Introduction}
 
-As described in Section~\ref{section:introduction}, there's an evident gap between the process of obtaining user described events and the retrieval of the desired video shots. Traditional approach of collecting text-based description of events alone are insufficient for effective retrieval process. With the vehicle-specific features such as the vehicle trajectory, time-stamp information, and colour information extracted via the extraction module introduced in Chapter~\ref{section:semanticsextraction}, retrieval techniques were designed to retrieve video shots resembling user described queries. This chapter engages the topic of semantic retrieval engines in detail and evaluates their performances along with analysis of the end results.
+As described in Section~\ref{section:introduction}, there's an evident gap between the process of obtaining user described events and the retrieval of the desired video shots. Traditional approach of collecting text-based description of events alone are insufficient for effective retrieval process.
 
-Two retrieval techniques with relatively different concepts and underlying frameworks are discussed in this chapter. The first technique was designed with a classic document retrieval system in mind, while the second technique was developed in order to address the shortcomings of the first. Next, the methods used to measure the difference between the user-described trajectory, vehicle colour classifying methods, scoring systems along with the results based on multiple users' review of the proposed method is discussed. This chapter also includes the retrieval speed of the second retrieval engine.
+With the vehicle-specific features such as the vehicle trajectory, time-stamp information, and colour information extracted via the extraction module introduced in Chapter~\ref{section:semanticsextraction},
+this chapter hone in on the second objective [02] of designing video retrieval techniques that takes in intuitive user-described queries to provide fast and accurate results.
+A combination of keyword based and sketch based retrieval was designed to allow users to describe the queries intuitively.
+%Retrieval techniques were designed to retrieve video shots resembling user described queries.
+In this chapter, the topic of semantic retrieval engines are engaged in detail along with the evaluation of their performances and analysis of the end results.
+
+Two retrieval techniques with relatively different concepts and underlying frameworks are discussed in this chapter. The first technique was designed with a classic document retrieval system inspired by Locality Sensitive Hashing (LSH), while the second technique was developed in order to address the shortcomings of the first by introducing similarity scores obtained using Chamfer Distance.
+Next, the methods used to measure the difference between the user-described trajectory, vehicle colour classifying methods, scoring systems along with the results based on multiple users' review of the proposed method is discussed. This chapter also includes the retrieval speed of the second retrieval engine.
 
 As described in the Experimental Methodology (see~\ref{sec:expmethodology}), both the vehicle trajectory and vehicle colour evaluation process were separated in order to better gauge the performance of each technique.
 
@@ -449,7 +456,7 @@ For simple trajectories, the Precision@K scores a high 100\% at the beginning an
 \begin{table}[!ht] \centering
 \begin{tabular}{|c|c|c|}
 \hline
-\multicolumn{1}{|c|}{\textbf{Trajectory Category}} & \textbf{Query Number} & \textbf{Query Minimap}\\ \hline
+\multicolumn{1}{|c|}{\textbf{Trajectory Category}} & \textbf{Query Number} & \textbf{Minimap}\\ \hline
 \multirow{5}{*}{Simple} & Query 4 & \includegraphics{image/minimaps/query_04.png} \\ \cline{2-3}
  & Query 5 & \includegraphics{image/minimaps/query_05.png} \\ \cline{2-3}
  & Query 7 & \includegraphics{image/minimaps/query_07.png} \\ \cline{2-3}
@@ -506,10 +513,37 @@ The difference between the simple and complex trajectories are rather distinct. 
 \end{figure}
 
 
+\cc{include more analysis of the comparison here!}
+Additional comparison between Chamfer Distance and various other distance measures were also computed to further understand the difference, advantages and properties of these methods. Table \ref{Table:DistanceCompare} contains a compilation of 7 different test cases which were compared against a sample ground truth data. These test cases were tested using 5 different distance measures: Chamfer Distance, Dynamic Time Warping, Hausdorff Distance, Earth Mover Distance, and Euclidean Distance.
+In all cases, smaller numbers represents higher similarity score while larger numbers represents lower similarity scores.
 
-\cc{for the analysis, include a "heatmap" of the versionone vs versiontwo for the evaluation of results} \\
-\cc{why the colour metric selected worked best (higher difference btween each term)}
+As a baseline comparison, a simplistic approach using Euclidean Distance was also measured. The results obtained shows minimal difference in the raw results when comparing the best case and worst test case. While the normalized results shows better results, it is not a useful metrics as we are not able to compare the scores of different query results during the actual retrieval process.
+Based on the results in Table \ref{Table:DistanceCompare}, it is noticed that Earth Mover Distance favours similar shapes as it is able to effectively deal with scaling of shapes. While useful in other applications, this is not a desireable property in the context of a retrieval engine in a car park setting. Likewise, this distance measure also heavily penalizes Test 1, which contains a mirrored shape.
 
+In the case of Hausdorff distance, it is noticed that this distance measure often measures the maximum distance of a set to the nearest point in the other set which is usually used for image matching. It is also observed that this distance measure was not able to handle Test 2 which deals with directional inputs, this shows that this metric was not a suitable candidate in our retrieval engine.
+The results also shows that both Chamfer Distance and Dynamic Time Warping has relatively similar performance in those 7 test cases. Nevertheless, Chamfer Distance was able to return higher difference ratio between the best case and worst case scenario. This attribute is very desired and extremely useful when sorting huge numbers of trajectories from the database.
+
+
+
+\begin{table}[]
+\begin{tabular}{llllllll}
+ & \includegraphics{image/suppResults/q1.PNG}
+ & \includegraphics{image/suppResults/q2.PNG}
+ & \includegraphics{image/suppResults/q3.PNG}
+ & \includegraphics{image/suppResults/q4.PNG}
+ & \includegraphics{image/suppResults/q5.PNG}
+ & \includegraphics{image/suppResults/q6.PNG}
+ & \includegraphics{image/suppResults/q7.PNG} \\
+ & \begin{tabular}[c]{@{}l@{}}Test 1:\\ Mirror\end{tabular} & \begin{tabular}[c]{@{}l@{}}Test 2:\\ Opposite Direction\end{tabular} & \begin{tabular}[c]{@{}l@{}}Test 3:\\ Short Trajectory\end{tabular} & \begin{tabular}[c]{@{}l@{}}Test 4:\\ Highly Resemble GT\end{tabular} & \begin{tabular}[c]{@{}l@{}}Test 5:\\ Partially Resemble GT\end{tabular} & \begin{tabular}[c]{@{}l@{}}Test 6:\\ Long Trajectories\end{tabular} & \begin{tabular}[c]{@{}l@{}}Test 7:\\ Similar Shape\end{tabular} \\
+Chamfer Distance & 0.02565 (1503.21) & 0.0169 (987.84) & 0.0246 (1444.00) & 0.0001 (6.25) & 0.0060 (353.89) & 0.9205 (53937.33) & 0.0062 (361.00) \\
+Dynamic Time Warping & 0.0503 (176.97) & 0.0344 (121.08) & 0.0604 (212.31) & 0.0033 (11.62) & 0.0239 (83.99) & 0.8079 (2841.17) & 0.0198 (69.57) \\
+Hausdorff Distance & 0.2042 (7.07) & 0.0647 (2.24) & 0.2021 (7.00) & 0.0407 (1.41) & 0.0866 (3.00) & 0.2974 (10.30) & 0.1042 (3.61) \\
+Earth Mover Distance & 0.4112 (0.96) & 0.0942 (0.22) & 0.0342 (0.08) & 0.0021 (0.01) & 0.3127 (0.73) & 0.1456 (0.34) & 0.0000 (0.00) \\
+Euclidean Distance & 0.1171 (5.00) & 0.1656 (7.07) & 0.1424 (6.08) & 0.0703 (3.00) & 0.0661 (2.82) & 0.3645 (15.56) & 0.0740 (3.16)
+\end{tabular}
+  \caption{Comparison of Difference Distance Measures against 7 Different Test Scenarios Against a Ground Truth Sample Data. The results are represented by Normalized Results Followed by the Actual Distance Measure obtained in Brackets. Smaller Numbers are Represents Closer Similarity.}
+\label{table:DistanceCompare}
+\end{table}
 
 In a nutshell, despite the flaws of Chamfer Distance, the implementation of $D_{chamfer}$ in the retrieval engine provided relatively good results (Average \textit{Precision@K} = 76\%) that were sorted in an organised and useful manner (\textit{nDCG} score = 83\%). The use of Chamfer Distance can be extended to other datasets of similar properties.
 
