--- a/5retrieval-module.tex
+++ b/5retrieval-module.tex
@@ -527,6 +527,7 @@ The results also shows that both Chamfer Distance and Dynamic Time Warping has r
 
 \begin{table}[]
 \begin{tabular}{llllllll}
+ Ground Truth Sample
  & \includegraphics{image/suppResults/q1.PNG}
  & \includegraphics{image/suppResults/q2.PNG}
  & \includegraphics{image/suppResults/q3.PNG}
@@ -534,7 +535,7 @@ The results also shows that both Chamfer Distance and Dynamic Time Warping has r
  & \includegraphics{image/suppResults/q5.PNG}
  & \includegraphics{image/suppResults/q6.PNG}
  & \includegraphics{image/suppResults/q7.PNG} \\
- & \begin{tabular}[c]{@{}l@{}}Test 1:\\ Mirror\end{tabular} & \begin{tabular}[c]{@{}l@{}}Test 2:\\ Opposite Direction\end{tabular} & \begin{tabular}[c]{@{}l@{}}Test 3:\\ Short Trajectory\end{tabular} & \begin{tabular}[c]{@{}l@{}}Test 4:\\ Highly Resemble GT\end{tabular} & \begin{tabular}[c]{@{}l@{}}Test 5:\\ Partially Resemble GT\end{tabular} & \begin{tabular}[c]{@{}l@{}}Test 6:\\ Long Trajectories\end{tabular} & \begin{tabular}[c]{@{}l@{}}Test 7:\\ Similar Shape\end{tabular} \\
+ \includegraphics{image/suppResults/gt.PNG} & \begin{tabular}[c]{@{}l@{}}Test 1:\\ Mirror\end{tabular} & \begin{tabular}[c]{@{}l@{}}Test 2:\\ Opposite Direction\end{tabular} & \begin{tabular}[c]{@{}l@{}}Test 3:\\ Short Trajectory\end{tabular} & \begin{tabular}[c]{@{}l@{}}Test 4:\\ Highly Resemble GT\end{tabular} & \begin{tabular}[c]{@{}l@{}}Test 5:\\ Partially Resemble GT\end{tabular} & \begin{tabular}[c]{@{}l@{}}Test 6:\\ Long Trajectories\end{tabular} & \begin{tabular}[c]{@{}l@{}}Test 7:\\ Similar Shape\end{tabular} \\
 Chamfer Distance & 0.02565 (1503.21) & 0.0169 (987.84) & 0.0246 (1444.00) & 0.0001 (6.25) & 0.0060 (353.89) & 0.9205 (53937.33) & 0.0062 (361.00) \\
 Dynamic Time Warping & 0.0503 (176.97) & 0.0344 (121.08) & 0.0604 (212.31) & 0.0033 (11.62) & 0.0239 (83.99) & 0.8079 (2841.17) & 0.0198 (69.57) \\
 Hausdorff Distance & 0.2042 (7.07) & 0.0647 (2.24) & 0.2021 (7.00) & 0.0407 (1.41) & 0.0866 (3.00) & 0.2974 (10.30) & 0.1042 (3.61) \\
