--- a/llt.bib
+++ b/llt.bib
@@ -2,6 +2,15 @@
 % Encoding: UTF8
 
 % ----- LIT REVIEW START -----
+@inproceedings{cheong2019efficient,
+  title={Efficient Semantic-Based Vehicle Retrieval in Long-term Car Park Videos},
+  author={Cheong, Clarence Weihan and Lim, Ryan Woei-Sheng and See, John and Wong, Lai-Kuan and Tan, Ian KT},
+  booktitle={2019 IEEE International Conference on Multimedia \& Expo Workshops (ICMEW)},
+  pages={138--143},
+  year={2019},
+  organization={IEEE}
+}
+
 
 @article{tian2017hierarchical,
   title={Hierarchical and networked vehicle surveillance in its: A survey},
