--- a/thesis.tex
+++ b/thesis.tex
@@ -12,7 +12,8 @@
 % for the degree symbol
 \usepackage{siunitx}
 
-
+% landscape
+\usepackage{lscape}
 
 \usepackage[x11names,dvipsnames,svgnames]{xcolor}
 \usepackage[os=win]{menukeys}
@@ -158,7 +159,7 @@ Last and not least, I would like to applaud myself and give myself some credit f
 {\SingleSpacing\printindex}
 
 \ownpubs
-\nociteconf{cheong2018vehicle,lim2017}
+\nociteconf{cheong2018vehicle,lim2017,cheong2019efficient}
 %\nocitejour{Lim:Ranaivo:Tang:Polibits:2011,Lim:Ranaivo:Tang:Procedia:2011}
 %\bibliographyjour{llt}
 \bibliographyconf{llt}
